Speed up libsignal-bridge-macros by not parsing the function bodies
syn-mid is a syn-author-endorsed crate that allows parsing a function
signature while treating the body as opaque. This is faster as an action
/and/ faster to build because we don't need all of syn.

--- a/rust/bridge/shared/macros/Cargo.toml
+++ b/rust/bridge/shared/macros/Cargo.toml
@@ -17,5 +17,6 @@ proc-macro = true
 heck = "0.3.1"
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0" }
+syn-mid = "0.5"
 unzip3 = "1.0.0"
